feat(reward): 供应方回调 + 发奖结果事件 + 履约扇出虚拟线程 (V3 PR-9) (#33)
能力清单 10、15，退出标准 17、18、19。

事件传输 V3 取进程内总线，发布侧只认 GrantResultPublisher 接口，V4 换
RocketMQ 只改一个 @Bean。不在 V3 接真实 broker：这层要验的「事件加速、
查单保证」由消费侧的幂等与查单任务并存决定，与传输是否跨进程无关；接
broker 只让每次 IT 多起两个进程，验不出额外的东西，真实 MQ 语义属 V4
退出标准第 5 条。接口这层的代价换来「换传输的影响面锁在一个实现类里」。

通知幂等按 (opNo, notifySeq) 两维。同一个 opNo 会收到多条语义不同的通知
（先受理后成功、供应方补发），只按 opNo 去重会把第二条真实通知当成重传
丢弃。它与「终态不被覆盖」是两道不同的闸：前者管通知只处理一次，后者管
后到的结果不覆盖先到的。重复投递返回 accepted=true —— ACK 的语义是「别
再投了」，返回失败会让供应方一直重投。

供应方通知验签独立密钥、独立错误码 4732。误判代价与支付侧不同：伪造的
成功通知会让发放记录进终态，而终态不再被查单推进，这笔发放永远停在「已
成功」而供应方那边什么都没有 —— 它不像重复发奖能被对账第 11 项数出来，
记录数是对的。

履约扇出改虚拟线程 + invokeAll（带超时），禁止 fail-fast。StructuredTaskScope
的 ShutdownOnFailure 或 invokeAny 会在券失败时 interrupt 正在飞行的月卡
调用 —— 那笔调用可能已到达供应方并成功，而本地既没结果也没终态，后续
回收清单里没有它：退了钱、月卡还在用户手里。超时项归 UNKNOWN 而非 FAIL。

注入自查两条全绿、用例无效，均已补：
- 去掉「未终结」谓词后 9 条全绿 —— 用例发的两条通知结果相同，覆盖与否
  写入结果一样。改让第二条携带相反结果后转红
- 扇出改 fail-fast 后 10 条全绿 —— mock 瞬时返回，取消发出时其余组早已
  跑完。给 B 组加 300ms 延迟后转红

这两处是新的一种遮蔽形态：不是缺用例，而是输入让约束两侧取值相同 ——
断言够得着，只是分辨不出。与「外层拦截」「数据规模不足」并列为三种。

245 IT + 39 单测全绿（+13）。

Co-authored-by: Claude Opus 5 (1M context) <noreply@anthropic.com>